fix: deixando as documentações das rotas usuarios, login e locais funcionais
